packages/polymath-ui/src/components/TxModal/style.scss
@import '~@polymathnetwork/ui/src/deprecated/styles/_variables.scss';

.pui-tx-modal {
  .bx--modal-content {
    margin-bottom: 20px;
  }

  .bx--modal-content__text {
    font-size: 14px;
  }

  .bx--modal-header__label {
    margin-bottom: 0;
    font-size: 13.5px;
    color: $poly-blue-light;
  }

  .bx--modal-header__heading {
    text-transform: capitalize;
    line-height: 35px;
    margin-bottom: 5px;
  }

  .pui-tx-animation {
    --borderWidth: 3px;
    position: absolute;
    top: -5px;
    left: 3px;
    z-index: 1;
    width: 494px;
    height: 2px;
  }

  .pui-tx-animation:after {
    content: '';
    position: absolute;
    top: calc(-1 * var(--borderWidth));
    left: calc(-1 * var(--borderWidth));
    height: calc(100% + var(--borderWidth) * 2);
    width: calc(100% + var(--borderWidth) * 2);
    background: linear-gradient(
      60deg,
      #252e6a,
      #5495e5,
      #5495e5,
      #5495e5,
      #252e6a
    );
    z-index: -1;
    animation: AnimatedGradient 3s infinite;
    background-size: 300% 300%;
  }

  @keyframes AnimatedGradient {
    0% {
      background-position: 0 0;
    }
    50% {
      background-position: 100% 0;
    }
    100% {
      background-position: 0 0;
    }
  }

  &.pui-pin-modal {
    .bx--modal-close {
      display: flex !important;
    }

    .pui-tx-animation:after {
      background: #5596e6;
    }
  }

  .pui-tx-continue {
    visibility: hidden;
    height: 60px;
    text-align: center;
  }

  &.pui-tx-success {
    .bx--modal-header__label {
      color: $poly-green;
    }

    .pui-tx-animation:after {
      background: $poly-green;
    }
  }

  &.pui-tx-failed {
    .bx--modal-header__label {
      color: $poly-red;
    }

    .pui-tx-animation:after {
      background: $poly-red;
    }
  }

  &.pui-tx-success,
  &.pui-tx-failed {
    .pui-tx-continue {
      visibility: visible;
      margin-bottom: 9px;
    }
  }

  .pui-tx-row {
    display: flex;
    margin-top: 6px;
    margin-bottom: 16px;

    &.pui-tx-next {
      opacity: 0.5;
    }

    &.pui-tx-email {
      margin-top: 39px;

      .pui-tx-icon {
        display: block;
        padding-top: 7px;
      }
    }

    .pui-tx-icon {
      display: flex;
      align-items: center;
      width: 50px;
      min-width: 50px;

      .bx--loading {
        width: 60px;
        height: 60px;
        margin-left: -12px;
      }
    }

    .pui-tx-info {
      .pui-h3 {
        color: $poly-blue-dark;
        text-transform: capitalize;
        margin-bottom: 2px;
      }

      .pui-tx-details {
        font-size: 12px;
        color: #152935;
        border-radius: 4px;
        background-color: #ebf0f7;
        padding: 6.5px 0 6.5px 16px;
        width: 312px;

        a {
          margin-left: 2px;
        }
      }
    }
  }
}

